Cleanup Server Common Module